--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':navigationtabbar')
-//    compile 'com.github.devlight.navigationtabbar:navigationtabbar:1.2.3'
+//    compile 'com.github.pos.navigationtabbar:navigationtabbar:1.2.3'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
