--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.pos.app"
@@ -12,6 +11,7 @@ android {
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
         android.defaultConfig.vectorDrawables.useSupportLibrary = true
+
 
     }
     buildTypes {
@@ -31,6 +31,7 @@ dependencies {
     implementation project(':navigationtabbar')
 //    compile 'com.github.pos.navigationtabbar:navigationtabbar:1.2.3'
 
+    implementation "com.andkulikov:transitionseverywhere:1.8.1"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -39,9 +40,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'org.apache.xmlrpc:xmlrpc:3.1.3'
+    implementation 'com.github.mthli:SugarTask:v0.4'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:customtabs:27.1.1'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.github.gturri:aXMLRPC:master-SNAPSHOT'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:support-v4:27.1.1'
